# rust_coreutil

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: cat.rs  cli.rs  echo.rs  head.rs  uniq.rs  wc.rs
tests/source/: cli.b.txt  cli.n.txt  echo.json
tests/source/head/: cli.1.txt  cli.txt  multiple.txt
tests/source/uniq/: i_output.txt  readme.txt  readme_c.txt
tests/source/wc/: c_cli.txt  c_files.txt  cli.txt  l_cli.txt  l_files.txt  m_file.txt  w_cli.txt  w_files.txt
