[package]
name = "rust_coreutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.4"
clap = { version = "3.1.6", features = ["derive"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79"}
syn = { version = "1.0.89", features = ["full", "extra-traits"]}
